<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background1"
    >

    <EditText
        android:id="@+id/subject_edittext"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="titleEnter"
        android:ems="10"
        android:hint="@string/enter_subject"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textColorHint="#635157"
        android:textColorLink="@color/purple_200"
        android:textCursorDrawable="?android:attr/textCursorDrawable"
        android:textSize="20sp"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="timeEnter"
        android:ems="10"
        android:inputType="text"
        android:minLines="5"
        android:text="text"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="64sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update"
            style="@style/CardView.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bgbtnpurple"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/CardView.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bgbtnpurple"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>